// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AstMetadataInferer should expose metadata.json in parsable format 1`] = `
Object {
  "astNodeTypes": Array [
    "MemberExpression",
  ],
  "compat": Object {
    "mdn_url": "https://developer.mozilla.org/docs/Web/API/Document/querySelector",
    "status": Object {
      "deprecated": false,
      "experimental": false,
      "standard_track": true,
    },
    "support": Object {
      "chrome": Object {
        "version_added": "1",
      },
      "chrome_android": Object {
        "version_added": "18",
      },
      "edge": Object {
        "version_added": "12",
      },
      "firefox": Object {
        "version_added": "3.5",
      },
      "firefox_android": Object {
        "version_added": "4",
      },
      "ie": Object {
        "version_added": "8",
      },
      "opera": Object {
        "version_added": "10",
      },
      "opera_android": Object {
        "version_added": "10.1",
      },
      "safari": Object {
        "version_added": "3.2",
      },
      "safari_ios": Object {
        "version_added": "3",
      },
      "samsunginternet_android": Object {
        "version_added": "1.0",
      },
      "webview_android": Object {
        "version_added": "1",
      },
    },
  },
  "id": "document.querySelector",
  "isStatic": true,
  "kind": "web",
  "language": "js-api",
  "name": "querySelector",
  "protoChain": Array [
    "document",
    "querySelector",
  ],
  "protoChainId": "document.querySelector",
}
`;

exports[`AstMetadataInferer should return basic output 1`] = `
Object {
  "astNodeTypes": Array [
    "NewExpression",
  ],
  "compat": Object {
    "mdn_url": "https://developer.mozilla.org/docs/Web/API/AbortController",
    "status": Object {
      "deprecated": false,
      "experimental": true,
      "standard_track": true,
    },
    "support": Object {
      "chrome": Object {
        "version_added": "66",
      },
      "chrome_android": Object {
        "version_added": "66",
      },
      "edge": Object {
        "version_added": "16",
      },
      "firefox": Object {
        "version_added": "57",
      },
      "firefox_android": Object {
        "version_added": "57",
      },
      "ie": Object {
        "version_added": false,
      },
      "opera": Object {
        "version_added": "53",
      },
      "opera_android": Object {
        "version_added": "47",
      },
      "safari": Array [
        Object {
          "version_added": "12.1",
        },
        Object {
          "notes": "Even though <code>window.AbortController</code> is defined, it doesn't really abort <code>fetch</code> requests. See <a href='https://webkit.org/b/174980'>bug 174980</a>.",
          "partial_implementation": true,
          "version_added": "11.1",
        },
      ],
      "safari_ios": Array [
        Object {
          "version_added": "12.2",
        },
        Object {
          "notes": "Even though <code>window.AbortController</code> is defined, it doesn't really abort <code>fetch</code> requests. See <a href='https://webkit.org/b/174980'>bug 174980</a>.",
          "partial_implementation": true,
          "version_added": "11.3",
        },
      ],
      "samsunginternet_android": Object {
        "version_added": "9.0",
      },
      "webview_android": Object {
        "version_added": "66",
      },
    },
  },
  "id": "AbortController",
  "isStatic": true,
  "kind": "web",
  "language": "js-api",
  "name": "AbortController",
  "protoChain": Array [
    "AbortController",
  ],
  "protoChainId": "AbortController",
}
`;

exports[`AstMetadataInferer should write to metadata.json correctly 1`] = `
Object {
  "astNodeTypes": Array [
    "NewExpression",
  ],
  "compat": Object {
    "mdn_url": "https://developer.mozilla.org/docs/Web/API/AbortController",
    "status": Object {
      "deprecated": false,
      "experimental": true,
      "standard_track": true,
    },
    "support": Object {
      "chrome": Object {
        "version_added": "66",
      },
      "chrome_android": Object {
        "version_added": "66",
      },
      "edge": Object {
        "version_added": "16",
      },
      "firefox": Object {
        "version_added": "57",
      },
      "firefox_android": Object {
        "version_added": "57",
      },
      "ie": Object {
        "version_added": false,
      },
      "opera": Object {
        "version_added": "53",
      },
      "opera_android": Object {
        "version_added": "47",
      },
      "safari": Array [
        Object {
          "version_added": "12.1",
        },
        Object {
          "notes": "Even though <code>window.AbortController</code> is defined, it doesn't really abort <code>fetch</code> requests. See <a href='https://webkit.org/b/174980'>bug 174980</a>.",
          "partial_implementation": true,
          "version_added": "11.1",
        },
      ],
      "safari_ios": Array [
        Object {
          "version_added": "12.2",
        },
        Object {
          "notes": "Even though <code>window.AbortController</code> is defined, it doesn't really abort <code>fetch</code> requests. See <a href='https://webkit.org/b/174980'>bug 174980</a>.",
          "partial_implementation": true,
          "version_added": "11.3",
        },
      ],
      "samsunginternet_android": Object {
        "version_added": "9.0",
      },
      "webview_android": Object {
        "version_added": "66",
      },
    },
  },
  "id": "AbortController",
  "isStatic": true,
  "kind": "web",
  "language": "js-api",
  "name": "AbortController",
  "protoChain": Array [
    "AbortController",
  ],
  "protoChainId": "AbortController",
}
`;
